-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7
-
None
-
febb6cf2d85c680271f5b0cebf8c7e54c805370f
RenderFrameHost::ExecuteJavaScript(...) can only be called on chrome:// or chrome-devtools:// URLs, therefore our runJavaScript and UserScripts API are not working.
How to reproduce the bug: try to run tst_qwebenginepage API test.
[1104/083910:FATAL:render_frame_host_impl.cc(314)] Check failed: CanExecuteJavaScript().
https://codereview.chromium.org/1123783002
https://codereview.chromium.org/1258593002
We should use RenderFrameHost::ExecuteJavaScriptInIsolatedWorld(...) or RenderFrameHost::ExecuteJavaScriptForTests(...) instead of the deprecated one.
For Gerrit Dashboard: QTBUG-49235 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
140040,3 | Fix JavaScript injection for Chromium 47 | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |