Fix JavaScript injection for Chromium 47

By default Chromium does not allow injecting javascript, however since
this is a standard webview feature they have a function the Android
WebView calls to allow it anyway, which we can also use.

Change-Id: I692864bb78e177c2da07a9a80e756e4f10ec1a32
Task-number: QTBUG-49235
Reviewed-by: Szabolcs David <davidsz@inf.u-szeged.hu>
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>